--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,38 @@ services:
     image: digital-city-nginx
     ports:
       - 80:80
+    depends_on:
+      - digital-city-api
+    networks:
+      - app-network
   digital-city-api:
     image: digital-city-api
     ports:
       - 9000:9000
     volumes:
-      - ./backend/.:/code
+      - ./backend/.:/var/www/digital-city-api
+    depends_on:
+      - mysql
+    networks:
+      - app-network
+  mysql:
+    image: digital-city-mysql
+    ports:
+      - '3306:3306'
+    expose:
+      - '3306'
+    environment:
+      MYSQL_DATABASE: digital_city_api_db
+      MYSQL_ROOT_PASSWORD: root
+    volumes:
+      - dbdata:/var/lib/mysql
+    networks:
+      - app-network
+volumes:
+  dbdata:
+    driver: local
+
+networks:
+  app-network:
+    driver: bridge
 
