--- a/backend/composer.json
+++ b/backend/composer.json
@@ -9,11 +9,14 @@
     "license": "MIT",
     "require": {
         "php": "^7.4",
+        "bensampo/laravel-enum": "^1.26",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
+        "laravel-doctrine/orm": "^1.5",
         "laravel/framework": "^7.0",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "ramsey/uuid-doctrine": "^1.5"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
@@ -34,7 +37,7 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "src\\": "src/"
         },
         "classmap": [
             "database/seeds",
