--- a/digital-city-auth/composer.json
+++ b/digital-city-auth/composer.json
@@ -16,7 +16,8 @@
         "laravel-doctrine/orm": "^1.5",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
-        "ramsey/uuid-doctrine": "^1.5"
+        "ramsey/uuid-doctrine": "^1.5",
+      "ext-json": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
