--- a/digital-city-api/composer.json
+++ b/digital-city-api/composer.json
@@ -17,6 +17,7 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "ramsey/uuid-doctrine": "^1.5",
+        "firebase/php-jwt": "^3.0|^4.0|^5.0",
         "ext-json": "*"
     },
     "require-dev": {
