--- a/digital-city-api/composer.json
+++ b/digital-city-api/composer.json
@@ -9,16 +9,17 @@
     "license": "MIT",
     "require": {
         "php": "^7.4",
+        "ext-json": "*",
         "bensampo/laravel-enum": "^1.26",
         "fideloper/proxy": "^4.2",
+        "firebase/php-jwt": "^3.0|^4.0|^5.0",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel-doctrine/orm": "^1.5",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "ramsey/uuid-doctrine": "^1.5",
-        "firebase/php-jwt": "^3.0|^4.0|^5.0",
-        "ext-json": "*"
+        "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
